# bootcamp

./: .gitignore  README.md  automate_sync_vps.sh  pyproject.toml
.github/workflows/: deploy-docker-level-three.yaml
Docker Drills/: ContainerDrills.md
Docker Drills/classDemoBrainstorm/: main.py  run_myImage.sh
Docker Drills/database_pythonOps/: compose.yaml
Docker Drills/database_pythonOps/app/: main.py  pyproject.toml
Docker Drills/docker_compose/: compose.yaml  compose2.yaml
Docker Drills/dockerfile/dockerfile_bookworm_gitclone_emacs_vim/: Dockerfile
Docker Drills/network_txtOps/: compose.yaml
Docker Drills/network_txtOps/saved_html/: index_saved.txt
Docker_Drills/classDemoBrainstorm/: Dockerfile
Docker_Drills/database_pythonOps/: compose.yaml
Docker_Drills/database_pythonOps/app/: main.py
Docker_Drills/docker_compose/: compose.yaml
Docker_Drills/dockerfile/dockerfile_python/: Dockerfile  main.py
Docker_Drills/network_txtOps/: compose.yaml
anant-hello/: hello.py
ex-basics-1/: README.md  main.py  pyproject.toml
ex-basics-1/ex_basics_1_aganitha_anant_hello.egg-info/: PKG-INFO  SOURCES.txt
ex-basics-2/: README.md  main.py  pyproject.toml
ex-basics-3/: README.md  main.py  pyproject.toml
ex-tools-1/: README.md  profile.html
linux/basics/sed_drills/: opsCSV.csv  sample.txt  task.sh
linux/scripting/: explore_files_searching.sh  pipelines_redirection.sh  printAlphabetsRedirection.sh  processManagement.sh  systemMonitor.sh
linux/scripting/Topic1/: tasks.sh
testin/: demo1.cast  demo2.cast  demo3.cast
(+58 files in other folders)
