[project]
name = "ex-basics-1-aganitha-anant-hello"
version = "3.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.1.0",
    "typer>=0.16.1",
]

[project.scripts]
say_hello = "main:main"

[tool.uv]
publish-url = "https://test.pypi.org/legacy/"
